--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>cicdProject</name>
   <url>http://maven.apache.org</url>
+  
+  
   <dependencies>
 <dependency>
   <groupId>org.apache.maven.plugins</groupId>
@@ -33,6 +35,17 @@
     <finalName>cicdProject</finalName>
     
     <plugins>
+	<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>2.3</version>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>3.0.0</version>
+            </plugin>
     <plugin>
     <groupId>org.apache.tomcat.maven</groupId>
     <artifactId>tomcat7-maven-plugin</artifactId>
@@ -50,7 +63,8 @@
 <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
-            <executions>
+			<version>3.1.0</version>
+			    <executions>
                 <execution>
                     <id>attach-javadocs</id>
                     <goals>
@@ -68,7 +82,9 @@
   <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
-        <executions>
+		    <version>2.2.1</version>
+
+		         <executions>
             <execution>
                 <id>attach-sources</id>
                 <goals>
@@ -87,6 +103,8 @@
             <filtering>true</filtering>
         </resource>
     </resources>
+   
+   
    
 </build>
  
