--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,11 +5,11 @@ jobs:
                 - image: circleci/openjdk:8-jdk           
                 - image: busybox:latest
                 steps:
-                - run:
+                - run: 
 
                         name: Unit Test
                         command: echo "Going to run Unit Test"
-                        mvn surefire:test test       
+                      - run:   mvn surefire:test test       
         sitetest:
                 docker:
                 - image: circleci/openjdk:8-jdk
@@ -18,7 +18,7 @@ jobs:
                 - run:
                         name: sit Test
                         command: echo "Going to run site Test"
-                         mvn site 
+                        -run:  mvn site 
         build_artifact:
                 docker:
                 - image: circleci/openjdk:8-jdk 
@@ -27,7 +27,7 @@ jobs:
                 - run:
                         name: Build Artifact
                         command: echo "Going to run the build artifact"
-                        mvn package
+                        - run mvn package
 
         deploy_to_dev:
                 docker:
