--- a/circle.yml
+++ b/circle.yml
@@ -1,7 +1,7 @@
 # ~/.circleci/config.yml
 version: 2.1
 jobs:
-  build:
+  test-maven:
     working_directory: ~/rr
     docker:
       - image: maven:3.5.0-jdk-9
@@ -21,4 +21,79 @@ jobs:
 
       - store_test_results:
           path: target/surefire-reports
-© 2020 GitHub, Inc.
+
+#-----------------------------------------------------------------
+build-maven:
+    working_directory: ~/rr
+    docker:
+      - image: maven:3.5.0-jdk-9
+
+    steps:
+      - checkout
+
+      - restore_cache:
+          key: rr-{{ checksum "pom.xml" }}
+
+      - run: mvn package
+
+      - save_cache:
+          paths:
+            - ~/.m2
+          key: rr-{{ checksum "pom.xml" }}
+
+      - store_test_results:
+          path: target/ 
+#------------------------------------------------------------------------------
+site-maven:
+    working_directory: ~/rr
+    docker:
+      - image: maven:3.5.0-jdk-9
+
+    steps:
+      - checkout
+
+      - restore_cache:
+          key: rr-{{ checksum "pom.xml" }}
+
+      - run: mvn site
+
+      - save_cache:
+          paths:
+            - ~/.m2
+          key: rr-{{ checksum "pom.xml" }}
+
+      - store_test_results:
+          path: target/site
+#--------------------------------------------------------------------------------------
+deploy-maven:
+    working_directory: ~/rr
+    docker:
+      - image: maven:3.5.0-jdk-9
+
+    steps:
+      - checkout
+
+      - restore_cache:
+          key: rr-{{ checksum "pom.xml" }}
+
+      - run: mvn surefire:test test
+
+      - save_cache:
+          paths:
+            - ~/.m2
+          key: rr-{{ checksum "pom.xml" }}
+
+      - store_test_results:
+
+          path: target/site
+# work flow
+
+workflows:
+   verson : 2
+ workflow:
+
+        jobs:
+          - test-maven
+          - build-maven
+          - site-maven
+          - deploy-maven
