--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,100 +1,54 @@
- # ~/.circleci/config.yml
+    # Java Maven CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-java/ for more details
+#
 version: 2
 jobs:
-  test-maven:
-    working_directory: ~/rr
+  build:
     docker:
-      - image: maven:3.5.0-jdk-9
+      # specify the version you desire here
+      - image: circleci/openjdk:8-jdk
+
+      # Specify service dependencies here if necessary
+      # CircleCI maintains a library of pre-built images
+      # documented at https://circleci.com/docs/2.0/circleci-images/
+      # - image: circleci/postgres:9.4
+
+    working_directory: ~/repo
+
+    environment:
+      # Customize the JVM maximum heap limit
+      MAVEN_OPTS: -Xmx3200m
 
     steps:
       - checkout
 
+      # Download and cache dependencies
       - restore_cache:
-          key: rr-{{ checksum "pom.xml" }}
+          keys:
+            - v1-dependencies-{{ checksum "pom.xml" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
 
+      - run: mvn dependency:go-offline
+
+      - save_cache:
+          paths:
+            - ~/.m2
+          key: v1-dependencies-{{ checksum "pom.xml" }}
+
+      # run tests!
       - run: mvn test
 
-      - save_cache:
-          paths:
-            - ~/.m2
-          key: rr-{{ checksum "pom.xml" }}
-
+      - run:
+          name: Save test results
+          command: |
+            mkdir -p ~/test-results/junit/
+            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/test-results/junit/ \;
+          when: always
       - store_test_results:
-          path: target/surefire-reports
-
-#-----------------------------------------------------------------
-build-maven:
-    working_directory: ~/rr
-    docker:
-      - image: maven:3.5.0-jdk-9
-
-    steps:
-      - checkout
-
-      - restore_cache:
-          key: rr-{{ checksum "pom.xml" }}
-
-      - run: mvn package
-
-      - save_cache:
-          paths:
-            - ~/.m2
-          key: rr-{{ checksum "pom.xml" }}
-
-      - store_test_results:
-          path: target/ 
-#------------------------------------------------------------------------------
-site-maven:
-    working_directory: ~/rr
-    docker:
-      - image: maven:3.5.0-jdk-9
-
-    steps:
-      - checkout
-
-      - restore_cache:
-          key: rr-{{ checksum "pom.xml" }}
-
-      - run: mvn site
-
-      - save_cache:
-          paths:
-            - ~/.m2
-          key: rr-{{ checksum "pom.xml" }}
-
-      - store_test_results:
-          path: target/site
-#--------------------------------------------------------------------------------------
-deploy-maven:
-    working_directory: ~/rr
-    docker:
-      - image: maven:3.5.0-jdk-9
-
-    steps:
-      - checkout
-
-      - restore_cache:
-          key: rr-{{ checksum "pom.xml" }}
-
-      - run: mvn surefire:test test
-
-      - save_cache:
-          paths:
-            - ~/.m2
-          key: rr-{{ checksum "pom.xml" }}
-
-      - store_test_results:
-
-          path: target/site
-# work flow
-
-workflows:
-   verson : 2
- workflow:
-
-        jobs:
-          - test-maven
-          - build-maven
-          - site-maven          
-          - deploy-maven
-         
+          path: ~/test-results/junit
+      - store_artifacts:
+          path: ~/test-results/junit
+      - store_artifacts:
+          path:  target/my-reports
