--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,13 +38,14 @@ jobs:
           key: v1-dependencies-{{ checksum "pom.xml" }}
 
       # run tests!
-      - run: mvn test
+      - run: mvn test package
 
       - run:
           name: Save test results
           command: |
             mkdir -p ~/test-results/junit/
             find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/test-results/junit/ \;
+            find . -type f -regex ".*/target/*.war" -exec cp {} target/my-reports/ \;
           when: always
       - store_test_results:
           path: ~/test-results/junit
